gitops/workloads/listmonk/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: listmonk-active
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9000
  selector:
    app: listmonk
