gitops/workloads/listmonk/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: listmonk-preview
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9000
  selector:
    app: listmonk
