gitops/workloads/listmonk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: listmonk
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  rules:
    - host: REPLACE_ME_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: listmonk-active
                port:
                  number: 80
